--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -3,5 +3,8 @@
     { "route": "/aboutus",   "rewrite": "/aboutus.html"   },
     { "route": "/contactus", "rewrite": "/contactus.html" },
     { "route": "/students",  "rewrite": "/students.html"  }
+    {
+      "route": "/api/pdf/*", "allowedRoles": [ "anonymous", "authenticated" ]
+    }
   ]
 }
