--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -3,8 +3,6 @@
     { "route": "/aboutus",   "rewrite": "/aboutus.html"   },
     { "route": "/contactus", "rewrite": "/contactus.html" },
     { "route": "/students",  "rewrite": "/students.html"  }
-    {
-      "route": "/api/pdf/*", "allowedRoles": [ "anonymous", "authenticated" ]
-    }
+    { "route": "/api/*", "allowedRoles":["anonymous","authenticated"] }
   ]
 }
