--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,8 +1,15 @@
 {
+  "navigationFallback": { 
+    "rewrite": "/index.html",
+    "exclude": ["/assets/*", "/api/*", "/partials/*", "/favicon.ico"] 
+  },
   "routes": [
-    { "route": "/aboutus", "rewrite": "/aboutus.html" },
+    { "route": "/aboutus",   "rewrite": "/aboutus.html" },
     { "route": "/contactus", "rewrite": "/contactus.html" },
-    { "route": "/students", "rewrite": "/students.html" },
+    { "route": "/students",  "rewrite": "/students.html" },
     { "route": "/api/*", "allowedRoles": ["anonymous","authenticated"] }
-  ]
+  ],
+  "responseOverrides": { 
+    "404": { "rewrite": "/index.html" } 
+  }
 }
