Emit Tailwind v4 CSS via PostCSS CLI; include stylesheet in homepage

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "node": ">=20.18.1"
   },
   "scripts": {
-    "home:build": "vite build --config spa/vite.config.ts",
     "routes": "node tools/generate-swa-routes.js",
     "index": "node tools/build-content-index.js",
-    "build": "npm run home:build && npm run routes && npm run index",
-    "build:azure": "npm run build"
+    "build:spa": "vite build -c spa/vite.config.ts",
+    "build:css": "postcss spa/src/styles/tailwind.css -o assets/app/hesaa-homepage.css",
+    "build": "npm run routes && npm run index && npm run build:spa && npm run build:css"
   },
   "repository": {
     "type": "git",
@@ -30,11 +30,14 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.13",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.5"
