--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "homepage": "https://github.com/vkoluguri/hesaa-swa-poc#readme",
   "dependencies": {
     "cheerio": "^1.1.2",
+    "i18next": "^25.5.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-i18next": "^15.7.3"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.13",
