--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
   "homepage": "https://github.com/vkoluguri/hesaa-swa-poc#readme",
   "dependencies": {
     "cheerio": "^1.1.2",
-    "i18next": "^25.5.2",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-i18next": "^15.7.3"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.13",
